--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
   <name>Password Generator</name>
   <description>A simple password generator</description>
   <properties>
-	  <java.version>21</java.version>
+		<java.version>21</java.version>
+	  <maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
 	  <dependency>
@@ -17,23 +20,24 @@
 	  </dependency>
   </dependencies>
   <build>
-  <plugins>
-    <plugin>
-      <!-- Build an executable JAR -->
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>3.3.0</version>
-      <configuration>
-        <archive>
-          <manifest>
-            <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>fr.ysaintmartin.pwgen.PasswordGenerator</mainClass>
-          </manifest>
-        </archive>
-      </configuration>
-    </plugin>
-  </plugins>
-</build>
+	<plugins>
+	  <plugin>
+		<!-- Build an executable JAR -->
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-jar-plugin</artifactId>
+	    <version>3.3.0</version>
+	    <configuration>
+				<outputDirectory>${env.HOMEPATH}/password-generator</outputDirectory>
+	        <archive>
+	          <manifest>
+	            <addClasspath>true</addClasspath>
+	            <classpathPrefix>lib/</classpathPrefix>
+	            <mainClass>fr.ysaintmartin.pwgen.PasswordGenerator</mainClass>
+	          </manifest>
+	        </archive>
+	    </configuration>
+	  </plugin>
+	</plugins>
+  </build>
 
 </project>
