--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	    <artifactId>maven-jar-plugin</artifactId>
 	    <version>3.3.0</version>
 	    <configuration>
-				<outputDirectory>${env.HOMEPATH}/password-generator</outputDirectory>
+				<outputDirectory>${env.HOMEPATH}/Dev/maven-builds/password-generator</outputDirectory>
 	        <archive>
 	          <manifest>
 	            <addClasspath>true</addClasspath>
